--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,12 +38,14 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    
+
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/profile, roles: [ROLE_USER,ROLE_ADMIN ]}
     role_hierarchy:
+        ROLE_USER:  ROLE_USER
         ROLE_ADMIN: ROLE_USER
-
 when@test:
     security:
         password_hashers:
