--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,6 +43,8 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: [ROLE_USER,ROLE_ADMIN ]}
+         # Exiger une authentification pour accéder à la route de réservation
+         - { path: ^/reservations, roles: IS_AUTHENTICATED_FULLY }
     role_hierarchy:
         ROLE_USER:  ROLE_USER
         ROLE_ADMIN: ROLE_USER
